--- a/app/views/rooms/new.html.erb
+++ b/app/views/rooms/new.html.erb
@@ -18,7 +18,7 @@
       <div class='chat-room-form__field--right'>
         <select name="room[user_ids][]">
         /* 選択したユーザーのidをコントローラーに送りたい */
-          <option valuse="">チャットするユーザーを選択してください</option>
+          <option value="">チャットするユーザーを選択してください</option>
           <% User.all.where.not(id: current_user.id).each do |user| %>
             <option value=<%=user.id%>><%= user.name %></option>
           <% end %>
